--- a/chisel-releases/slices/libssl3t64.yaml
+++ b/chisel-releases/slices/libssl3t64.yaml
@@ -1,7 +1,7 @@
-package: libssl3
+package: libssl3t64
 
 essential:
-  - libssl3_copyright
+  - libssl3t64_copyright
 
 slices:
   libs:
@@ -17,4 +17,4 @@ slices:
 
   copyright:
     contents:
-      /usr/share/doc/libssl3/copyright:
+      /usr/share/doc/libssl3t64/copyright:
