--- a/chisel-releases/slices/openssl.yaml
+++ b/chisel-releases/slices/openssl.yaml
@@ -8,8 +8,9 @@ slices:
     essential:
       - libc6_config
       - libc6_libs
-      - libssl3_libs
+      - libssl3t64_libs
       - openssl_config
+      - openssl_data
     contents:
       /usr/bin/c_rehash:
       /usr/bin/openssl:
@@ -22,6 +23,10 @@ slices:
       /usr/lib/ssl/certs:
       /usr/lib/ssl/openssl.cnf:
       /usr/lib/ssl/private:
+
+  data:
+    contents:
+      /usr/lib/ssl/cert.pem:
 
   copyright:
     contents:
